# frontend/src/api/openapi.json
@@ -2309,7 +2309,7 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"IAirline": {
+			"AirlineResponse": {
 				"properties": {
 					"code": {
 						"type": "string"
@@ -2323,28 +2323,18 @@
 					"quality_score": {
 						"type": "number",
 						"format": "double"
-					},
-					"created_at": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"updated_at": {
-						"type": "string",
-						"format": "date-time"
 					}
 				},
 				"required": [
 					"code",
 					"name",
 					"country",
-					"quality_score",
-					"created_at",
-					"updated_at"
+					"quality_score"
 				],
 				"type": "object",
 				"additionalProperties": false
 			},
-			"SuccessResponse_IAirline-Array_": {
+			"SuccessResponse_AirlineResponse-Array_": {
 				"description": "Wrapper de éxito JSend (aplicado por el middleware global).",
 				"properties": {
 					"status": {
@@ -2356,7 +2346,7 @@
 					},
 					"data": {
 						"items": {
-							"$ref": "#/components/schemas/IAirline"
+							"$ref": "#/components/schemas/AirlineResponse"
 						},
 						"type": "array"
 					}
@@ -3047,7 +3037,7 @@
 		},
 		"/airports": {
 			"get": {
-				"operationId": "Search",
+				"operationId": "SearchAirports",
 				"responses": {
 					"200": {
 						"description": "Ok",
@@ -3078,14 +3068,14 @@
 		},
 		"/airlines": {
 			"get": {
-				"operationId": "Search",
+				"operationId": "SearchAirlines",
 				"responses": {
 					"200": {
 						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {
-									"$ref": "#/components/schemas/SuccessResponse_IAirline-Array_"
+									"$ref": "#/components/schemas/SuccessResponse_AirlineResponse-Array_"
 								}
 							}
 						}
